--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@ h1{
     display : flex;
     justify-content: center;
 }
-div{
-    justify-content: center;
-}
+
 canvas{
     justify-content: center;
 }
@@ -13,4 +11,21 @@ canvas{
     display: flex;
     justify-content: center;
     margin: auto;
+}
+.lives {
+    display: flex;
+    justify-content: right;
+    margin: auto;
+}
+
+
+.gameEnd{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0, 0.5);
+    z-index: 9999;
 }
